# terminal-search

./: .gitignore  Cargo.toml  README.md
src/: main.rs
