[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = { version = "0.4.20", features = [] }
regex = "1.10.2"
serde_yaml = "0.9.30"
serde = { version = "1.0.195", features = ["derive"] }
dirs = "5.0.1"
log4rs = "1.2.0"
clap = { version = "4.4.18", features = ["derive"] }
open = "5.0.1"
clap_complete = "4.4.7"
clipboard = "0.5.0"
selection = "1.1.1"
home = "0.5.9"
