[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = { version = "0.4.20", features = [] }
log4rs = "1.2.0"
regex = "1.10.2"
selection = "1.1.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
home = "0.5.9"
open = "5.0.1"

[profile.release]
opt-level = 3
debug = false
lto = true
