[package]
name = "search"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = { version = "0.4.20", features = [] }
log4rs = "1.2.0"
regex = "1.10.2"
selection = "1.1.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
home = "0.5.9"
open = "5.0.1"
uuid = { version = "1.7.0" , features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
inquire = "0.6.2"
edit = "0.1.5"

[profile.release]
opt-level = 3
debug = false
lto = true
